// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenCapturePanelContent properly renders a view with "canvas" layout option 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText css-1vkrgyt-euiText-s"
  >
    <p>
      <span>
        Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
      </span>
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />
  <div
    class="euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="generated-id-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button"
          data-test-subj="reportModeToggle"
          id="generated-id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <span
                class="euiSwitch__icon"
                data-euiicon-type="cross"
              />
              <span
                class="euiSwitch__icon euiSwitch__icon--checked"
                data-euiicon-type="check"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="generated-id"
        >
          <span>
            Full page layout
          </span>
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="generated-id-help-0"
      >
        <span>
          Remove borders and footer logo
        </span>
      </div>
    </div>
  </div>
  <button
    class="euiButton euiButton--primary euiButton--small euiButton--fill euiButton--fullWidth"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        <span>
          Generate Analytical App
        </span>
      </span>
    </span>
  </button>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall css-1u1q69a-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion"
  >
    <div
      class="euiAccordion__triggerWrapper css-mrlcwq-euiAccordion__triggerWrapper"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton css-86d10e-euiAccordion__iconButton"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button css-ot1kdj-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper css-bu9wkr-euiAccordion__childWrapper"
      id="advanced-options"
      role="region"
      tabindex="-1"
    >
      <div>
        <div
          class=" css-ip8p5q-euiAccordion__children"
        >
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiText css-1vkrgyt-euiText-s"
          >
            <p>
              <span>
                Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
              </span>
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger css-1a24lnd-euiPanel-none-s-danger-euiCallOut"
          >
            <p
              class="euiTitle euiCallOutHeader__title css-18vjrtd-euiTitle-xxs-euiCallOutHeader-danger"
            >
              <span
                aria-hidden="true"
                class="css-15maws8-euiCallOut__icon"
                color="inherit"
                data-euiicon-type="alert"
              />
              Unsaved work
            </p>
            <div
              class="euiText css-15vp7z3-euiText-xs-euiTextColor-default-euiCallOut__description"
            >
              <div
                class="euiText css-1vkrgyt-euiText-s"
              >
                <p>
                  <span>
                    Save your work before copying this URL.
                  </span>
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenCapturePanelContent properly renders a view with "print" layout option 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText css-1vkrgyt-euiText-s"
  >
    <p>
      <span>
        Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
      </span>
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />
  <div
    class="euiFormRow"
    id="generated-id-row"
  >
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiSwitch"
      >
        <button
          aria-checked="false"
          aria-describedby="generated-id-help-0"
          aria-labelledby="generated-id"
          class="euiSwitch__button"
          data-test-subj="usePrintLayout"
          id="generated-id"
          role="switch"
          type="button"
        >
          <span
            class="euiSwitch__body"
          >
            <span
              class="euiSwitch__thumb"
            />
            <span
              class="euiSwitch__track"
            >
              <span
                class="euiSwitch__icon"
                data-euiicon-type="cross"
              />
              <span
                class="euiSwitch__icon euiSwitch__icon--checked"
                data-euiicon-type="check"
              />
            </span>
          </span>
        </button>
        <span
          class="euiSwitch__label"
          id="generated-id"
        >
          <span>
            Optimize for printing
          </span>
        </span>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="generated-id-help-0"
      >
        <span>
          Uses multiple pages, showing at most 2 visualizations per page
        </span>
      </div>
    </div>
  </div>
  <button
    class="euiButton euiButton--primary euiButton--small euiButton--fill euiButton--fullWidth"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        <span>
          Generate Analytical App
        </span>
      </span>
    </span>
  </button>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall css-1u1q69a-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion"
  >
    <div
      class="euiAccordion__triggerWrapper css-mrlcwq-euiAccordion__triggerWrapper"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton css-86d10e-euiAccordion__iconButton"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button css-ot1kdj-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper css-bu9wkr-euiAccordion__childWrapper"
      id="advanced-options"
      role="region"
      tabindex="-1"
    >
      <div>
        <div
          class=" css-ip8p5q-euiAccordion__children"
        >
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiText css-1vkrgyt-euiText-s"
          >
            <p>
              <span>
                Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
              </span>
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger css-1a24lnd-euiPanel-none-s-danger-euiCallOut"
          >
            <p
              class="euiTitle euiCallOutHeader__title css-18vjrtd-euiTitle-xxs-euiCallOutHeader-danger"
            >
              <span
                aria-hidden="true"
                class="css-15maws8-euiCallOut__icon"
                color="inherit"
                data-euiicon-type="alert"
              />
              Unsaved work
            </p>
            <div
              class="euiText css-15vp7z3-euiText-xs-euiTextColor-default-euiCallOut__description"
            >
              <div
                class="euiText css-1vkrgyt-euiText-s"
              >
                <p>
                  <span>
                    Save your work before copying this URL.
                  </span>
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenCapturePanelContent renders the default view properly 1`] = `
<div
  class="euiForm kbnShareContextMenu__finalPanel"
  data-test-subj="shareReportingForm"
>
  <div
    class="euiText css-1vkrgyt-euiText-s"
  >
    <p>
      <span>
        Analytical Apps can take a minute or two to generate based upon the size of your test-object-type.
      </span>
    </p>
  </div>
  <div
    class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
  />
  <button
    class="euiButton euiButton--primary euiButton--small euiButton--fill euiButton--fullWidth"
    data-test-subj="generateReportButton"
    type="button"
  >
    <span
      class="euiButtonContent euiButton__content"
    >
      <span
        class="euiButton__text"
      >
        <span>
          Generate Analytical App
        </span>
      </span>
    </span>
  </button>
  <hr
    class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginSmall css-1u1q69a-euiHorizontalRule-full-s"
    style="width: auto; margin-left: -16px; margin-right: -16px;"
  />
  <div
    class="euiAccordion"
  >
    <div
      class="euiAccordion__triggerWrapper css-mrlcwq-euiAccordion__triggerWrapper"
    >
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        aria-labelledby="generated-id"
        class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton css-86d10e-euiAccordion__iconButton"
        tabindex="-1"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="arrowRight"
        />
      </button>
      <button
        aria-controls="advanced-options"
        aria-expanded="false"
        class="euiAccordion__button css-ot1kdj-euiAccordion__button"
        id="generated-id"
        type="button"
      >
        <span
          class="euiAccordion__buttonContent"
        >
          Advanced options
        </span>
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      class="euiAccordion__childWrapper css-bu9wkr-euiAccordion__childWrapper"
      id="advanced-options"
      role="region"
      tabindex="-1"
    >
      <div>
        <div
          class=" css-ip8p5q-euiAccordion__children"
        >
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiText css-1vkrgyt-euiText-s"
          >
            <p>
              <span>
                Alternatively, copy this POST URL to call generation from outside Kibana or from Watcher.
              </span>
            </p>
          </div>
          <div
            class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
          />
          <div
            class="euiPanel euiPanel--danger euiPanel--paddingSmall euiCallOut euiCallOut--danger css-1a24lnd-euiPanel-none-s-danger-euiCallOut"
          >
            <p
              class="euiTitle euiCallOutHeader__title css-18vjrtd-euiTitle-xxs-euiCallOutHeader-danger"
            >
              <span
                aria-hidden="true"
                class="css-15maws8-euiCallOut__icon"
                color="inherit"
                data-euiicon-type="alert"
              />
              Unsaved work
            </p>
            <div
              class="euiText css-15vp7z3-euiText-xs-euiTextColor-default-euiCallOut__description"
            >
              <div
                class="euiText css-1vkrgyt-euiText-s"
              >
                <p>
                  <span>
                    Save your work before copying this URL.
                  </span>
                </p>
              </div>
              <div
                class="euiSpacer euiSpacer--s css-78drzl-euiSpacer-s"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
